--- a/TypeGap/TypeGap.nuspec
+++ b/TypeGap/TypeGap.nuspec
@@ -12,4 +12,7 @@
     <copyright>Copyright 2017 Bluestone</copyright>
     <tags>C# ASP TypeScript Generation StronglyTyped</tags>
   </metadata>
+  <files>
+    <file src="bin\Release" target="lib" />
+  </files>
 </package>
