--- a/TypeGap/TypeGap.csproj
+++ b/TypeGap/TypeGap.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.6;net452;net461</TargetFrameworks>
+    <TargetFrameworks>netstandard1.6;net452</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' != 'netstandard1.6' ">
